<resources>
    <string name="app_name">LocalStorage</string>
    <string name="add_employee">add employee</string>
    <string name="add_todo">Add Todo</string>
    <string name="show_todo">Show Todo</string>
    <string name="delete_all_todo">Delete All Todo</string>
    <string name="choose_an_action">Choose an action on todo</string>
    <string name="edit_todo">Edit this todo</string>
    <string name="delete_todo">Delete this todo</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="save">save</string>
    <string name="error_empty_title">Title can\'t be empty</string>
    <string name="error_empty_description">Description can\'t be empty</string>
    <string name="add_the_title_for_your_task_here">Add the title for your task here</string>
    <string name="add_the_description_for_your_task_here">Add the description for your task here</string>
</resources>