<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".features.todo.activities.EditTodoActivity">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_todo_title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="24dp"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/tv_todo_title_text"
        app:layout_constraintStart_toStartOf="@+id/tv_todo_title_text"
        app:layout_constraintTop_toBottomOf="@+id/tv_todo_title_text" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_todo_description_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="20dp"
        android:text="@string/description"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/et_title"
        tools:layout_editor_absoluteX="12dp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/tv_todo_description_text"
        app:layout_constraintStart_toStartOf="@+id/tv_todo_description_text"
        app:layout_constraintTop_toBottomOf="@+id/tv_todo_description_text" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_save_todo_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_description" />


</androidx.constraintlayout.widget.ConstraintLayout>